<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SiemensCameraMV5xCtrl" Id="{68916811-74d4-49bf-b976-74cbf634e821}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SiemensCameraMV5xCtrl

VAR_INPUT
	bEnable				: BOOL;
	strScannerIPAddr	: T_IPv4Addr	:= '192.168.1.44';
	nScannerPortNo		: UINT			:= 50000;
END_VAR

VAR_OUTPUT
	eSocketState		: E_SocketConnectionState;
END_VAR

VAR
	fbTCPPortCtrl		: FB_TCP_ClientPortCtrl;
	fbTCPReceive		: FB_ReceiveString;
	strTCPRxString		: T_MaxString;
	ftrigEnable			: F_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ftrigEnable(CLK := bEnable);
IF ftrigEnable.Q THEN
	strTCPRxString := ''; (* clears input buffer *)
END_IF


(* TCP Socket establish connect *)
fbTCPPortCtrl(
	bEnable				:= bEnable, 
	strRemoteIPAddr		:= strScannerIPAddr, 
	nRemotePortNo		:= nScannerPortNo, 
	tReconnectTime		:= T#20S, 
	eSocketState		=> eSocketState, 
	bError				=> , 
	nErrorID			=> );
	
(* poll TCP port receive string *)
fbTCPReceive(
	bEnable			:= fbTCPPortCtrl.bConnected,
	hSocket			:= fbTCPPortCtrl.hSocket,
	tUpdateTime		:= T#100MS,
	strTCPRxString	:= strTCPRxString
);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>